draft-packages/tile/KaizenDraft/Tile/TileGrid.scss
@import "~@kaizen/design-tokens/sass/spacing";
@import "~@kaizen/design-tokens/sass/layout";
@import "~@kaizen/component-library/styles/layout";
@import "~@kaizen/component-library/styles/responsive";

.grid {
  max-width: $kz-layout-content-max-width;
  display: grid;
  grid-template-columns: repeat(auto-fit, 330px);
  grid-gap: $kz-spacing-md;
  justify-content: start;
  justify-items: start;
  align-items: center;

  @include ca-media-mobile {
    grid-template-columns: repeat(2, minmax(226px, 370px));

    > * {
      width: 100%;
    }
  }

  @media (max-width: 480px) {
    display: block;
  }
}

.tile {
  @include ca-media-mobile {
    @include ca-margin($bottom: $kz-spacing-md);

    &:last-child {
      margin: 0;
    }
  }
}

